@@ -134,6 +134,7 @@ Dan Hagerty                         hag@gnu.ai.it.edu
 Dan Pascu                           dan@services.iiruc.ro
 Daniel Bergstrom                    noa@melody.se
 Daniel P. Berrangé                  berrange@redhat.com
+Daniel Stavrovski                   d@stavrovski.net
 Dániel Varga                        danielv@axelero.hu
 Danny Levinson                      danny.levinson@overture.com
 Darrel Francis                      d.francis@cheerful.com
